--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Mochen07/sumocen-server#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "blueimp-md5": "^2.12.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
