--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "blueimp-md5": "^2.12.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "mongoose": "^5.8.7"
   },
   "devDependencies": {
