更新服务器的基础框架, 由express -> koa, 增加一些基础插件

--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "sumocen-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "koa-template",
+  "version": "0.1.0",
+  "author": "bayi",
+  "private": true,
   "scripts": {
-    "dev": "nodemon main.js",
-    "build": "babel src -d dist",
-    "start": "node dist/app.js"
+    "start": "node ./bin/www",
+    "dev": "pm2 start ecosystem.config.js --env dev",
+    "test": "pm2 start ecosystem.config.js --env test",
+    "pro": "pm2 start ecosystem.config.js --env pro",
+    "logs": "pm2 logs",
+    "stop": "pm2 stop ecosystem.config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mochen07/sumocen-server.git"
-  },
-  "author": "mochen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mochen07/sumocen-server/issues"
-  },
-  "homepage": "https://github.com/Mochen07/sumocen-server#readme",
   "dependencies": {
-    "blueimp-md5": "^2.12.0",
-    "connect-mongo": "^3.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "formidable": "^1.2.1",
-    "mongoose": "^5.8.7"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "nodemon": "^2.0.2"
+    "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-helmet": "^4.1.0",
+    "koa-jwt": "^3.5.1",
+    "koa-router": "^7.4.0",
+    "koa-static-cache": "^5.1.2",
+    "koa2-cors": "^2.0.6",
+    "log4js": "^3.0.6",
+    "mongoose": "^5.5.5"
   }
 }
