--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "koa": "^2.6.2",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^6.0.1",
     "koa-helmet": "^4.1.0",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
